--- a/style.css
+++ b/style.css
@@ -187,6 +187,18 @@ nav {
     }
 }
 
+.reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.reveal.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
 .about-me__picture {
     width: 100%;
 
